--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.4",
     "shards-vue": "^1.0.7",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vue-select": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
