--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "i18n": "^0.8.5",
     "printd": "^1.4.1",
     "shards-vue": "^1.0.7",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.15.4",
     "vue-router": "^3.1.5",
     "vue-select": "^3.5.1"
   },
